--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -2,9 +2,11 @@
 @import 'login';
 @import 'home';
 @import 'emprestimos';
+@import 'metas';
 @import 'minhaArea';
 @import './components/sideBar';
 @import './components/userInfosComponent';
 @import './components/cardComponent';
 @import './components/header&footer';
 @import './components/emprestimoOptions';
+@import './components/metaComponent';
