--- a/digibank/src/assets/styles/main.css
+++ b/digibank/src/assets/styles/main.css
@@ -1,4 +1,4 @@
-.flexCenter, .formArea .formLogin .double-input, .formArea .formLogin, .formArea, .mainLogin, .headerLogin {
+.flexCenter, .mainCadastro .sectionRight .formCadastro .boxInputsCadastro, .mainCadastro .sectionRight .formCadastro, .mainCadastro .sectionRight, .mainCadastro .btnCadastro, .mainCadastro .sectionLeft .boxTextCadastro, .mainCadastro .sectionLeft, .backColor .mainLogin .formArea .formLogin .double-input, .backColor .mainLogin .formArea .formLogin, .headerLogin {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -243,13 +243,13 @@ h1 {
   margin-bottom: 20px;
 }
 
-.flex, .suport-header, main#minha-area .suport-minha-area, main#emprestimos, main#home .left-menu-home nav, main#home {
+.flex, .suport-header, main#minha-area .suport-minha-area, main#metas .header-page button, main#metas .header-page, main#emprestimos, main#home .left-menu-home nav, main#home {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.column, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#minha-area, main#home .right-menu-home, main#home .left-menu-home nav a, main#home .left-menu-home {
+.column, .suport-meta, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#minha-area, main#metas, main#home .right-menu-home, main#home .left-menu-home nav a, main#home .left-menu-home {
   display: flex;
   flex-direction: column;
 }
@@ -267,7 +267,7 @@ h1 {
   transform: scale(0.98);
 }
 
-.sombreado, .suport-emprestimo-option, .credit-card {
+.sombreado, .suport-meta, .suport-emprestimo-option, .credit-card {
   box-shadow: 0 3px 7px 0px #f4f4f4;
 }
 
@@ -299,13 +299,13 @@ h1 {
   margin-bottom: 20px;
 }
 
-.flex, .suport-header, main#minha-area .suport-minha-area, main#emprestimos, main#home .left-menu-home nav, main#home {
+.flex, .suport-header, main#minha-area .suport-minha-area, main#metas .header-page button, main#metas .header-page, main#emprestimos, main#home .left-menu-home nav, main#home {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.column, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#minha-area, main#home .right-menu-home, main#home .left-menu-home nav a, main#home .left-menu-home {
+.column, .suport-meta, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#minha-area, main#metas, main#home .right-menu-home, main#home .left-menu-home nav a, main#home .left-menu-home {
   display: flex;
   flex-direction: column;
 }
@@ -323,7 +323,7 @@ h1 {
   transform: scale(0.98);
 }
 
-.sombreado, .suport-emprestimo-option, .credit-card {
+.sombreado, .suport-meta, .suport-emprestimo-option, .credit-card {
   box-shadow: 0 3px 7px 0px #f4f4f4;
 }
 
@@ -331,7 +331,6 @@ main#home {
   background-image: url("../img/bird-logo.png");
   background-repeat: no-repeat;
   background-position: right -70px;
-  height: calc(100vh - 120px);
 }
 main#home .left-menu-home {
   justify-content: space-between;
@@ -398,13 +397,13 @@ h1 {
   margin-bottom: 20px;
 }
 
-.flex, .suport-header, main#minha-area .suport-minha-area, main#emprestimos, main#home, main#home .left-menu-home nav {
+.flex, .suport-header, main#minha-area .suport-minha-area, main#metas .header-page button, main#metas .header-page, main#emprestimos, main#home, main#home .left-menu-home nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.column, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#minha-area, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home {
+.column, .suport-meta, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#minha-area, main#metas, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home {
   display: flex;
   flex-direction: column;
 }
@@ -422,7 +421,7 @@ h1 {
   transform: scale(0.98);
 }
 
-.sombreado, .suport-emprestimo-option, .credit-card {
+.sombreado, .suport-meta, .suport-emprestimo-option, .credit-card {
   box-shadow: 0 3px 7px 0px #f4f4f4;
 }
 
@@ -470,13 +469,13 @@ h1 {
   margin-bottom: 20px;
 }
 
-.flex, .suport-header, main#minha-area .suport-minha-area, main#home, main#home .left-menu-home nav, main#emprestimos {
+.flex, .suport-header, main#minha-area .suport-minha-area, main#metas .header-page button, main#metas .header-page, main#home, main#home .left-menu-home nav, main#emprestimos {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.column, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#minha-area, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home {
+.column, .suport-meta, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#minha-area, main#metas, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home {
   display: flex;
   flex-direction: column;
 }
@@ -494,7 +493,83 @@ h1 {
   transform: scale(0.98);
 }
 
-.sombreado, .suport-emprestimo-option, .credit-card {
+.sombreado, .suport-meta, .suport-emprestimo-option, .credit-card {
+  box-shadow: 0 3px 7px 0px #f4f4f4;
+}
+
+main#metas .header-page {
+  margin: 4rem 0;
+}
+main#metas .header-page button {
+  padding: 10px 50px;
+  font-weight: 500;
+  font-size: 1rem;
+  border: none;
+  border-radius: 10px;
+  color: #fff;
+  background-color: #C00414;
+}
+main#metas .meta-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url(../fonts/Montserrat/Montserrat-VariableFont_wght.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Quicksand", sans-serif;
+  src: url(../fonts/Quicksand-Regular.ttf) format("truetype");
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat";
+}
+*::selection {
+  background-color: #f4f4f4;
+}
+
+main {
+  height: calc(100vh - 120px);
+}
+
+h1 {
+  font-weight: 400;
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.flex, .suport-header, main#minha-area .suport-minha-area, main#home, main#home .left-menu-home nav, main#emprestimos, main#metas .header-page, main#metas .header-page button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.column, .suport-meta, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#minha-area, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home, main#metas {
+  display: flex;
+  flex-direction: column;
+}
+
+.centralizado, .container {
+  margin: 0 auto;
+}
+
+.container {
+  width: 75%;
+}
+
+.btnPressionavel:active, .suport-emprestimo-option button:active, .options-card button:active, main#minha-area .suport-minha-area .right-section .user-button:active, .backColor .mainLogin .formArea .formLogin button:active, main#home .left-menu-home nav a:active {
+  transition: all 150ms;
+  transform: scale(0.98);
+}
+
+.sombreado, .suport-meta, .suport-emprestimo-option, .credit-card {
   box-shadow: 0 3px 7px 0px #f4f4f4;
 }
 
@@ -592,13 +667,13 @@ h1 {
   margin-bottom: 20px;
 }
 
-.flex, .suport-header, main#home, main#home .left-menu-home nav, main#emprestimos, main#minha-area .suport-minha-area {
+.flex, .suport-header, main#home, main#home .left-menu-home nav, main#emprestimos, main#metas .header-page, main#metas .header-page button, main#minha-area .suport-minha-area {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.column, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home, main#minha-area {
+.column, .suport-meta, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home, main#metas, main#minha-area {
   display: flex;
   flex-direction: column;
 }
@@ -616,7 +691,7 @@ h1 {
   transform: scale(0.98);
 }
 
-.sombreado, .suport-emprestimo-option, .credit-card {
+.sombreado, .suport-meta, .suport-emprestimo-option, .credit-card {
   box-shadow: 0 3px 7px 0px #f4f4f4;
 }
 
@@ -678,13 +753,13 @@ h1 {
   margin-bottom: 20px;
 }
 
-.flex, .suport-header, main#home, main#home .left-menu-home nav, main#emprestimos, main#minha-area .suport-minha-area {
+.flex, .suport-header, main#home, main#home .left-menu-home nav, main#emprestimos, main#metas .header-page, main#metas .header-page button, main#minha-area .suport-minha-area {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.column, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home, main#minha-area {
+.column, .suport-meta, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, .suport-info-user, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home, main#metas, main#minha-area {
   display: flex;
   flex-direction: column;
 }
@@ -702,7 +777,7 @@ h1 {
   transform: scale(0.98);
 }
 
-.sombreado, .suport-emprestimo-option, .credit-card {
+.sombreado, .suport-meta, .suport-emprestimo-option, .credit-card {
   box-shadow: 0 3px 7px 0px #f4f4f4;
 }
 
@@ -760,13 +835,13 @@ h1 {
   margin-bottom: 20px;
 }
 
-.flex, .suport-header, main#home, main#home .left-menu-home nav, main#emprestimos, main#minha-area .suport-minha-area {
+.flex, .suport-header, main#home, main#home .left-menu-home nav, main#emprestimos, main#metas .header-page, main#metas .header-page button, main#minha-area .suport-minha-area {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.column, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home, main#minha-area, .suport-info-user {
+.column, .suport-meta, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, .options-card, .credit-card .info-credit-card, .credit-card, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home, main#metas, main#minha-area, .suport-info-user {
   display: flex;
   flex-direction: column;
 }
@@ -784,7 +859,7 @@ h1 {
   transform: scale(0.98);
 }
 
-.sombreado, .suport-emprestimo-option, .credit-card {
+.sombreado, .suport-meta, .suport-emprestimo-option, .credit-card {
   box-shadow: 0 3px 7px 0px #f4f4f4;
 }
 
@@ -867,11 +942,29 @@ h1 {
   box-sizing: border-box;
   font-family: "Montserrat";
 }
+*::selection {
+  background-color: #f4f4f4;
+}
 
-.flex, .suport-header {
+main {
+  height: calc(100vh - 120px);
+}
+
+h1 {
+  font-weight: 400;
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.flex, .suport-header, main#home, main#home .left-menu-home nav, main#emprestimos, main#metas .header-page, main#metas .header-page button, main#minha-area .suport-minha-area {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.column, .suport-meta, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home, main#metas, main#minha-area, .suport-info-user, .credit-card, .credit-card .info-credit-card, .options-card {
+  display: flex;
+  flex-direction: column;
 }
 
 .centralizado, .container {
@@ -880,6 +973,15 @@ h1 {
 
 .container {
   width: 75%;
+}
+
+.btnPressionavel:active, .suport-emprestimo-option button:active, .backColor .mainLogin .formArea .formLogin button:active, main#home .left-menu-home nav a:active, main#minha-area .suport-minha-area .right-section .user-button:active, .options-card button:active {
+  transition: all 150ms;
+  transform: scale(0.98);
+}
+
+.sombreado, .suport-meta, .suport-emprestimo-option, .credit-card {
+  box-shadow: 0 3px 7px 0px #f4f4f4;
 }
 
 header {
@@ -941,11 +1043,29 @@ footer span {
   box-sizing: border-box;
   font-family: "Montserrat";
 }
+*::selection {
+  background-color: #f4f4f4;
+}
 
-.flex, .suport-header {
+main {
+  height: calc(100vh - 120px);
+}
+
+h1 {
+  font-weight: 400;
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.flex, main#home, main#home .left-menu-home nav, main#emprestimos, main#metas .header-page, main#metas .header-page button, main#minha-area .suport-minha-area, .suport-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.column, .suport-meta, .suport-emprestimo-option .infos-emprestimo-option, .suport-emprestimo-option, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home, main#metas, main#minha-area, .suport-info-user, .credit-card, .credit-card .info-credit-card, .options-card {
+  display: flex;
+  flex-direction: column;
 }
 
 .centralizado, .container {
@@ -954,6 +1074,127 @@ footer span {
 
 .container {
   width: 75%;
+}
+
+.btnPressionavel:active, .suport-emprestimo-option button:active, .backColor .mainLogin .formArea .formLogin button:active, main#home .left-menu-home nav a:active, main#minha-area .suport-minha-area .right-section .user-button:active, .options-card button:active {
+  transition: all 150ms;
+  transform: scale(0.98);
+}
+
+.sombreado, .suport-meta, .suport-emprestimo-option, .credit-card {
+  box-shadow: 0 3px 7px 0px #f4f4f4;
+}
+
+.suport-emprestimo-option {
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 15px;
+  border: 3px solid #f4f4f4;
+  border-radius: 10px;
+  gap: 15px;
+}
+.suport-emprestimo-option h2 {
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+.suport-emprestimo-option .infos-emprestimo-option span {
+  font-size: 1rem;
+}
+.suport-emprestimo-option button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #C00414;
+  color: #fff;
+  font-weight: 500;
+  margin: 0 0 0 auto;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url(../fonts/Montserrat/Montserrat-VariableFont_wght.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Quicksand", sans-serif;
+  src: url(../fonts/Quicksand-Regular.ttf) format("truetype");
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat";
+}
+*::selection {
+  background-color: #f4f4f4;
+}
+
+main {
+  height: calc(100vh - 120px);
+}
+
+h1 {
+  font-weight: 400;
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.flex, main#home, main#home .left-menu-home nav, main#emprestimos, main#metas .header-page, main#metas .header-page button, main#minha-area .suport-minha-area, .suport-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.column, .suport-meta, main#home .left-menu-home, main#home .left-menu-home nav a, main#home .right-menu-home, main#metas, main#minha-area, .suport-info-user, .credit-card, .credit-card .info-credit-card, .options-card, .suport-emprestimo-option, .suport-emprestimo-option .infos-emprestimo-option {
+  display: flex;
+  flex-direction: column;
+}
+
+.centralizado, .container {
+  margin: 0 auto;
+}
+
+.container {
+  width: 75%;
+}
+
+.btnPressionavel:active, .backColor .mainLogin .formArea .formLogin button:active, main#home .left-menu-home nav a:active, main#minha-area .suport-minha-area .right-section .user-button:active, .options-card button:active, .suport-emprestimo-option button:active {
+  transition: all 150ms;
+  transform: scale(0.98);
+}
+
+.sombreado, .suport-meta, .credit-card, .suport-emprestimo-option {
+  box-shadow: 0 3px 7px 0px #f4f4f4;
+}
+
+.suport-meta {
+  justify-content: space-between;
+  padding: 30px 35px;
+  width: 49%;
+  height: 450px;
+  border: 3px solid #f4f4f4;
+  border-radius: 10px;
+}
+.suport-meta h2 {
+  font-weight: 400;
+  font-size: 1.75rem;
+  margin-bottom: 15px;
+}
+.suport-meta .suport-infos {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.suport-meta .suport-infos div {
+  width: 100%;
+}
+.suport-meta .suport-infos span {
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
