--- a/digibank/src/assets/styles/components/_metaComponent.scss
+++ b/digibank/src/assets/styles/components/_metaComponent.scss
@@ -1,12 +1,18 @@
 @import '../base';
-
+.box-meta{
+  @extend .flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 2rem;
+}
 .suport-meta {
   @extend .sombreado;
   @extend .column;
   justify-content: space-between;
   padding: 30px 35px;
 
-  width: 49%;
+  width: 48%;
   height: 450px;
 
   border: 3px solid $hover-background;
@@ -16,6 +22,7 @@
     font-weight: 400;
     font-size: 1.75rem;
     margin-bottom: 15px;
+    text-transform: capitalize;
   }
 
   .suport-infos {
@@ -25,13 +32,12 @@
 
     width: 100%;
     height: 100%;
-
-    div {
-      width: 100%;
+    .spans-meta{
+      @extend .column
     }
-
     span{
       text-align: center;
+      text-transform: capitalize;
     }
   }
 }
